Update images and online platform

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="jumbotron">
     <h1 class="display-4">¡Repartimos comida a domicilio! <span class="badge badge-info">Nuevo</span></h1>
-    <p class="lead">Podrás encontrarnos en <span class="text-info"><b>Deliveroo</b></span> con el nombre de <b>Café bar
+    <p class="lead">Podrás encontrarnos en <span class="text-info"><b>Just Eat</b></span> con el nombre de <b>Café bar
         Los
         Montaditos</b>.</p>
     <hr class="my-4">
