Replace images extension

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     <p>También puede hacer su pedido en este teléfono <b>958 26 29 94</b> y recogerlo en el local.</p>
   </div>
 
-  <img src="carta/carta-1.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-2.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-3.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-4.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-6.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-5.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-7.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-8.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-9.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-1.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-2.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-3.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-4.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-6.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-5.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-7.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-8.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-9.png" class="img-fluid mx-auto d-block" alt="Responsive image">
 
 
   <!-- Optional JavaScript -->
