--- a/index.html
+++ b/index.html
@@ -24,24 +24,25 @@
     </ol>
   </nav>
 
-  <div class="jumbotron">
+  <!--div class="jumbotron">
     <h1 class="display-4">¡Repartimos comida a domicilio! <span class="badge badge-info">Nuevo</span></h1>
     <p class="lead">Podrás encontrarnos en <span class="text-info"><b>Just Eat</b></span> con el nombre de <b>Café bar
         Los
         Montaditos</b>.</p>
     <hr class="my-4">
     <p>También puede hacer su pedido en este teléfono <b>958 26 29 94</b> y recogerlo en el local.</p>
-  </div>
+  </div-->
 
   <img src="carta/carta-1.png" class="img-fluid mx-auto d-block" alt="Responsive image">
   <img src="carta/carta-2.png" class="img-fluid mx-auto d-block" alt="Responsive image">
   <img src="carta/carta-3.png" class="img-fluid mx-auto d-block" alt="Responsive image">
   <img src="carta/carta-4.png" class="img-fluid mx-auto d-block" alt="Responsive image">
-  <img src="carta/carta-6.png" class="img-fluid mx-auto d-block" alt="Responsive image">
   <img src="carta/carta-5.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-6.png" class="img-fluid mx-auto d-block" alt="Responsive image">
   <img src="carta/carta-7.png" class="img-fluid mx-auto d-block" alt="Responsive image">
   <img src="carta/carta-8.png" class="img-fluid mx-auto d-block" alt="Responsive image">
   <img src="carta/carta-9.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+  <img src="carta/carta-10.png" class="img-fluid mx-auto d-block" alt="Responsive image">
 
 
   <!-- Optional JavaScript -->
